--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ h1 {
 .name-highlight{
     color: orange;
 }
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+}
+.half-width img{
+    width: 100%;
+}
